size and location editors should only accept integers, not doubles